--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hoodie-plugin-git",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A plugin to add Git Hoodie",
   "author": {
     "name": "Dale Shaw",
@@ -25,7 +25,7 @@
     "www",
     "appback"
   ],
-  "homepage": "https://github.com/appback/hoodie-plugin-git",
+  "homepage": "http://code.appback.com/hoodie-git-plugin",
   "bugs": {
     "url": "https://github.com/appback/hoodie-plugin-git/issues"
   },
